# LogosX

./: .env.example  .gitignore  README.md  pyproject.toml
ai_debate_arena.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: chairman_rules.yaml  clerk_rules.yaml  debate_rules.yaml  sensitive_keywords.yaml
config/philosopher_roles/east/: zhuangzi.yaml
config/philosopher_roles/west/: guy_debord.yaml
debate_arena/: __init__.py  __main__.py  cli.py  config_loader.py  document_manager.py  llm_factory.py  rules_engine.py
debate_arena/agents/: __init__.py  chairman.py  clerk.py  debater.py
debate_arena/orchestration/: graph.py
debate_arena/parsing/: debate_markdown.py
debate_arena/search/: __init__.py  embedder.py  hybrid_search.py  redis_vector_cache.py  searxng_client.py  sqlite_cache.py
debate_arena/utils/: __init__.py  json_utils.py  text_utils.py
docs/: 使用指南.md  示例输出.md  辩论环节实现说明.md  部署指南.md
searxng-docker/: docker-compose.yml
searxng-docker/searxng/: limiter.toml  settings.yml
tests/: test_clerk_agent.py  test_debate_markdown_parsing.py  test_debate_stages_and_rendering.py  test_debater_fallback.py  test_embedder_offline.py  test_llm_fallback.py
